src/snapshots/ebnf__parser__test__annotate_list.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a_b_cat+ <name>;\n         a_b_cat ::= 'a' <0> | 'b' <1>;\n     "
- - lhs: filter
    rhs:
      RegexExt:
        - NonTerminal:
            - a_b_cat
            - name: ""
        - Repeat1
        - name: name
  - lhs: a_b_cat
    rhs:
      Alternation:
        - Terminal:
            - a
            - name: "0"
        - Terminal:
            - b
            - name: "1"
        - name: ""

