src/snapshots/ebnf__parser__test__annotate_list_nested.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= (a_b_cat 'tag' <nameInner> )+ <name>;\n         a_b_cat ::= 'a' <0> | 'b' <1>;\n     "
- - lhs: filter
    rhs:
      RegexExt:
        - Group:
            - Multiple:
                - - NonTerminal:
                      - a_b_cat
                      - name: ""
                  - Terminal:
                      - tag
                      - name: nameInner
                - name: ""
            - name: ""
        - Repeat1
        - name: name
  - lhs: a_b_cat
    rhs:
      Alternation:
        - Terminal:
            - a
            - name: "0"
        - Terminal:
            - b
            - name: "1"
        - name: ""

