src/snapshots/ebnf__parser__test__fmt_n.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= 'a:' \\n 'b:';\n     "
- - lhs: filter
    rhs:
      Multiple:
        - String:
            - "a:"
            - ""
        - Fmt: n
        - String:
            - "b:"
            - ""

